--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
+    "flowbite": "^2.5.2",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
     "zod": "^4.1.12"
