--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,css,md,json}\""
   },
   "dependencies": {
+    "@apollo/client": "^3.13.1",
     "@reduxjs/toolkit": "^2.10.1",
     "axios": "^1.13.2",
     "flowbite": "^2.5.2",
@@ -21,6 +22,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.5",
+    "graphql": "^16.10.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
